--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "date-fns": "^2.16.1",
     "ngx-currency": "^2.5.2",
     "primeflex": "^2.0.0",
