Configurando rota do dashboard e configuracoes iniciais de graficos

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,9 @@
               "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+                "node_modules/chart.js/dist/Chart.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -101,7 +103,9 @@
               "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+                "node_modules/chart.js/dist/Chart.js"
+            ]
           }
         },
         "lint": {
