--- a/package.json
+++ b/package.json
@@ -12,31 +12,24 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/animations": "~11.0.1",
     "@angular/cdk": "^11.0.1",
+    "@angular/cli": "^11.2.1",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@auth0/angular-jwt": "^5.0.2",
-    "date-fns": "^2.16.1",
-    "ngx-currency": "^2.5.2",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primeng": "^11.0.0-rc.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "chart.js": "^2.9.4",
     "codelyzer": "^6.0.0",
+    "date-fns": "^2.16.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
@@ -44,16 +37,21 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ngx-currency": "^2.5.2",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.0.0-rc.1",
     "protractor": "~7.0.0",
+    "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "engines": {
-      "node": "14.15.1",
-      "npm": "6.14.8"
+    "node": "14.15.1",
+    "npm": "6.14.8"
   }
 }
